...
      ],
    );
  }

  Widget _buildCurrencySelection() {
    return DropdownButton<Currency>(
      key: const Key('btnCurrency'),
      value: currency,
      underline: const SizedBox(),
      isDense: true,
      items: Currency.values.where((element) => element.available).map(
        (e) {
          return DropdownMenuItem(
...
      },
    );
  }

  Widget _buildDepositAmountWidget(BuildContext context) {
    return TextField(
      key: const Key('txtAmount'),
      controller: amountController,
      decoration: const InputDecoration(
        isDense: true,
        isCollapsed: false,
      ),
      keyboardType: const TextInputType.numberWithOptions(decimal: true),
...
